--- a/index.html
+++ b/index.html
@@ -310,6 +310,105 @@ Student :-Nahi Sir.. Maine to aap ko dekh ke bola...
 <br>
 तो हसते टाइम दांत क्यू नहीं गिरते?
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+31)जब भाई बहन से पुछता है :- मै कैसा लग रहा हूँ तो
+<br>
+ बहन:- wow भाई superb
+लेकिन जब बहन भाई से पुछती है :- मैं कैसी लग रही हूँ ? 
+<br>
+तो भाई- wow एकदम बंदरीया लग रही है..
+<br>
+सारे भाईयों को बहुत मजा आता है. अपनी बहन को चिढाने में
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+32)मेरे parents को तुम नही पसंद फिर भी तुम्हारे लिए उनसे लड़ रही हूँ Because I love you so much
+.<br>
+.<br>
+.<br>
+My mobile
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+33)परसों के बाद से सबसे ज्यादा तो श्रीलंकाई है डरे हुए है कि,
+<br>
+<br>
+कहीं भारत ये न कह दे कि लंका को तो श्री राम जी पहले ही जीत चुके है वापस करो
+</h1>
+<br>
+<br>
+  <h1 style="color:Yellow">
+  माँ -: बेटा क्या कर रहे हो?
+  <br>
+ 34)बेटा -: पढ रहा हु माँ
+<br>
+माँ -: शाबास! क्या पढ रहे हो
+<br>
+ बेटा -: आपकी होने वाली बहु के SMS
+<br>
+दे थप्पड़ दे थप्पड़
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+35)पिता: तुम मेरी बेटी से.. कब से प्यार करते हो? 
+<br>
+लड़का: पिछले 7 महीनों से
+<br>
+ पिता : मगर मैं कैसे यकीन करूं?
+ <br>
+लड़का: ठीक है फिर, 2 महीने और रुक जाओ!
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+36)पाउडर खाकर बनाई हुई बॉडी,<br>
+जमीन बेचकर आया हुआ पैसा ..<br>
+और फेसबुक पर पटाई हुई छोरी, कभी भी टिकती , नहीं ...
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+37)Husband:Call ambulance, fast! I am having heart attack...<br>
+Wife: (took his mobile) Quick!! Tell me the password<br>
+Husband:It's ok! I am feeling Better now.
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+38)लडका लडकी होटल में गए | <br>
+वेटर :- मेम आप क्या लेंगी....???
+<br>
+लडकी:- मिर्च वाला घेवर..।
+<br>
+वेटर :- क्या..??
+<br>
+लडकी:- मिर्च वाला घेवर..।
+<br>
+वेटर:-😳😳।
+<br>
+लडका:- अरे भाई गाँव की हैं.....!!!! 
+<br>
+तु टेंशन मत ले...पिज्जा माँग रही हैं....!!!!
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+39)बाबा रामदेव का पतंजलि की ओर से एक नया बयान जारी Google Maps इस्तेमाल ना करें स्वदेशी बने
+चाय वाले से रास्ता पूछें
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+40)लोगों की बातें कभी दिल पर नहीं लेनी चाहिये
+लोग तो "अमरूद" खरीदते समय पूछते हैं. "मीठे हैं ना?" 
+<br>
+बाद में "नमक" लगा के खाते हैं।
+</h1>
 
       </div>
     </div>
