--- a/index.html
+++ b/index.html
@@ -409,6 +409,95 @@ Husband:It's ok! I am feeling Better now.
 <br>
 बाद में "नमक" लगा के खाते हैं।
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+40)लोगों की बातें कभी दिल पर नहीं लेनी चाहिये
+लोग तो "अमरूद" खरीदते समय पूछते हैं. "मीठे हैं ना?" 
+<br>
+बाद में "नमक" लगा के खाते हैं।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+41)एक बात बतानी थी....
+पैंतीस(35) और सैंतीस(37) कभी साथ नहीं रेह सकते....
+क्यूंकी उनके बीच छतीस(36) का आंकड़ा है
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+42)गंजो कि रेस में एक गंजे ने बाजी मारी
+लेकिन वो इनाम लेने को तैयार ही नही
+कहता है ये भी कोई खेल है, 
+ जिसके इनाम में...कंघी और तेल है
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+43)मेरा बचपन काफी संघर्ष-पूर्ण बीता है. म स्कूल जाता तो टीचर पीटते थे 
+<br>
+नहीं जाता तो घरवाले
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+44)Exam खत्म बात<br>
+खत्म...<br>
+ किसी ने Result का<br>
+पूछा तो रिश्ता भी<br>
+खत्म<br>
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+45)एक शराबी छत पेसे निचे गिर गया पूरी भीड़ जामा होगयी और पूछने लगी "क्या हुआ ? क्या हुआ ?
+<br>
+शराबी - पता नहीं भाई, में अभी जस्ट निचे आया हु
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+46)L.K.G का Boy : तू मुझसे शादी कलेगी ?<br>
+गर्ल : नी<br>
+Boy : कल्ले ना<br>
+गर्ल : नी मे नी कलूंगी<br>
+Boy : कल्ले, तेको टॉफी दूंगा<br>
+गर्ल : इसीलिये तो नी कलनी, मेरी किसी ओर से कुरकुरे में बात हो गई है.<br>
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+47)लड़की ब्यूटी पार्लर से मेकअप करा के आयी<br>
+लड़की जैसे ही मेट्रो ट्रेन में चढ़ी<br>
+बंगाली आदमी बोला - हॉट<br>
+लड़की थैंक यू डियर ... <br>
+बंगाली अरे काहे का थैंक्यू - हम बोला आगे से हॉट हमको उतारना है<br>
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+48)इश्क का समंदर भी क्या समंदर है<br>
+जो डूब गया वह आशिक,<br>
+ जो बच गया वह दीवाना |<br>
+और जो तैरता रह गया वह पति ।
+.<br>
+Thank God we are safe
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+49)एक हाथी 1 ने रोमांटिक मूड में एक चींटी को छेड़ दिया
+चींटी गुस्से में हाथी की बीवी के पास गई और बोली...
+अपने आवारा शौहर को संभाल लो वरना मर्द हमारे भी छिछोरे हैं और बाहर तुम भी निकलती हो
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+50)एक बार एक हाथी था और एक चींटी था...<br>
+आगे का चुटकुला खुद बनाओ मित्रों...<br>
+आत्मनिर्भर बनों । 
+</h1>
 
       </div>
     </div>
