--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@ friend & family . </h1>
   <html>
 <body>
 
-
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "304238f4-10b0-4d96-81db-f641ff30809b",
+      safari_web_id: "",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
   <h1 style="color: Yellow">
   1)हमारी Post का उद्देश्य सिर्फ मनोरंजन करना है.
 <br>
