--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ friend & family . </h1>
 
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 <script>
-  window.OneSignal = window.OneSignal || [];
+  window.OneSignal = window.OneSignal || [New Update Here];
   OneSignal.push(function() {
     OneSignal.init({
       appId: "304238f4-10b0-4d96-81db-f641ff30809b",
