--- a/index.html
+++ b/index.html
@@ -497,7 +497,82 @@ Thank God we are safe
 आगे का चुटकुला खुद बनाओ मित्रों...<br>
 आत्मनिर्भर बनों । 
 </h1>
-
+<br>
+<br>
+ <h1 style="color:Yellow">
+51) गर्लफ्रेंड:- मेरी याद आती है तो तुम क्या करते हो <br>
+ बॉयफ्रेंड :-तुम्हारी पसंदीदा चॉकलेट खा लेता हूं तुम क्या
+<br>
+ करती हो जब मेरी याद आए तब<br>
+गर्लफ्रेंड:- मैं भी गुटखा खा लेती हूं<br>
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+52) टीचर : न्यूटन का नियम बताओ<br>
+ लड़का : सर पूरी लाइन तो याद नहीं लास्ट का याद हैं
+<br>
+ टीचर : चलो लास्ट का ही सुनाओ<br>
+लड़का : और इसे ही न्यूटन का नियम कहते हैं<br>
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+ 53)दादा जी (टिंकू से) :- बेटा अंदर से जरा मेरे दांत लेकर आना।<br>
+टिंकू :- पर दादू अभी तो रोटी भी नहीं बनी?<br>
+दादा जी :- अबे रोटी को मार गोली सामने वाली पड़ोसन को Smile देनी है।
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+54)हम जीते एक बार है, मरते एक बार हैं प्यार एक बार होता है, और शादी भी एक ही बार होती है,
+तो ये exam बार बार क्यों ?
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+55)बारिश होने की सबसे ज़्यादा खुशी घर के खिड़की दरवाज़ों को होती हैं खुशी के मारे फूल ही जाते है....
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+ 56)friend 1 : भाई नेट कौनसा यूज करते हो ??<br>
+Friend 2 : BSNL<br>
+friend 1 : मंथली क्या देते हो ??
+ Friend 2 : गालियाँ ... !!
+ </h1>
+ <br>
+ <br>
+  <h1 style="color:Yellow">
+ 57) साइंस टीचर : क्लास में सो रहे हो क्या ?<br>
+राजू : नहीं टीचर गुरुत्वाकर्षण से सर नीचे गिर रहा है 
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+ 58)अंग्रेज- What is this? <br>
+ हलवाई - This is दही<br>
+अंग्रेज - What is Dahi?<br>
+हलवाई - Milk sleep at night and morning become tight
+</h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+59) मुकेश – डॉक्टर साहब, मुझे एक समस्या है। डॉक्टर क्या?
+ <br>
+मुकेश बात करते वक्त मुझे आदमी दिखाई नहीं देता !<br>
+ डॉक्टर - और ऐसा कब होता है?<br>
+ <br>
+मुकेश – फोन पर बात करते वक्त... 
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+60)एक माहला फल वाल से अंग्रेजी में फल मांग रही थी "Give me some destroyed husband"
+<br>
+<br>
+एक घंटा लगा समझने में कि वह "नाशपति " मांग रही थी
+</h1>
       </div>
     </div>
   </div>
