--- a/index.html
+++ b/index.html
@@ -573,6 +573,47 @@ friend 1 : मंथली क्या देते हो ??
 <br>
 एक घंटा लगा समझने में कि वह "नाशपति " मांग रही थी
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+61)पति:- मैच वाला चैनल लगाओ। <br>
+पत्नीः- नहीं लगाउंगी। <br>
+पतिः देख लूंगा । <br>
+पत्नी: क्या देख लोगे?<br>
+ पतिः यही चैनल जो तुम देख रही हो...<br>
+ </h1>
+ <br>
+ <br>
+ <h1 style="color:Yellow">
+62) पति: सुनो जी क्या तुम मेरी ज़िन्दगी का चाँद बनोगी?<br>
+ पत्नी: हाँ हाँ जानू क्यों नहीं । <br>
+ पति: तो ठीक है 9,955,887.6 किलोमीटर दूर रहा करो।<br>
+ </h1>
+ <br>
+ <br>
+  <h1 style="color:Yellow">
+  63)बीवी :- ये बन्दुक लेके दरवाजे पे क्यों खड़े हो .. ?
+  <br>
+पति :- शेर का शिकार करने जा रही हु.. <br>
+बीवी :- तो जाते क्यों नहीं..? <br>
+पति :- बहार कुत्ता खड़ा हैं..!!
+</h1>
+<br>
+<br>
+  <h1 style="color:Yellow">
+64) बेटा:- पापा 10 रुपए देना गरीब इन्सान को देने है<br>
+पापा:- बेटा कहा है गरीब आदमी<br>
+बेटा:- बेचारा बहार धूप में आइसक्रीम बेच रहा है।
+</h1>
+<br>
+<br>
+  <h1 style="color:Yellow">
+ 65) ब्रेकिंग न्यूज़ सोना बिल्कुल फ़्री कर दिया हैं 
+  <br>.
+  <br>.
+  <br>.
+  सरकार ने..  सुबह सोना, दोपहर सोना,रात सोना जब मन करे तब सोना
+</h1>
       </div>
     </div>
   </div>
