--- a/index.html
+++ b/index.html
@@ -614,6 +614,42 @@ friend 1 : मंथली क्या देते हो ??
   <br>.
   सरकार ने..  सुबह सोना, दोपहर सोना,रात सोना जब मन करे तब सोना
 </h1>
+<br>
+<br>
+ <h1 style="color:Yellow">
+66)एक बहुत पुरानी कहावत है कि....
+बहुत पुरानी है ना इसलिए याद नहीं आ रहा, याद आते ही बताऊंगा।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+67)साधु :- जब हम कई साल नहीं बोलते उसे मौनव्रत कहते हैं।<br>
+पति:- हम लोग उसे शादी कहते हैं !!
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+68)जो सोवत है वो खोवत है<br>
+और जो जागत है<br>
+ वो भी कुछ नही उखाड़ पावत हैं
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+69)Boy: ये कैसी चाय बनायी है तुमने, अजीब सा स्वाद है इसका !<br>
+Girlfriend: ये कॉफ़ी है साले गरीब !<br>
+Boy: ओह
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+70)बिहारी औरत चेक कैश करने गई<br>
+क्लर्क – साइन करो. <br>
+बिहारी औरत - कैसे ? कैसे?<br>
+क्लर्क- जैसे ख़त के अंत में लिखती हो<br>
+बिहारी औरत - ने लिखा<br>
+तोहर चुम्मा के इंतजार में, तोहर बिजली
+</h1>
       </div>
     </div>
   </div>
