--- a/index.html
+++ b/index.html
@@ -650,6 +650,42 @@ Boy: ओह
 बिहारी औरत - ने लिखा<br>
 तोहर चुम्मा के इंतजार में, तोहर बिजली
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+71)आज 15 साल बाद हिंदी की किताब खोली
+<br>
+कौआ साला अभी भी प्यासा बैठा है।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+72)कितनी भी अच्छी मूवी देखलो
+पर जो मजा मोहल्ले कि लड़ाई देखने में आता है
+वो मजा कहीं नहीं मिलता।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+73)आजकल जिस उम्र में दिल टूट रहे हैं..
+उस उम्र में हमारी नटराज की पेन्सिल टूटा करती थी।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+74)"पति और पत्नी का ज़ोरदार झगड़ा होता है। <br>
+पति गुस्से से: तेरी जैसी 50 मिलेंगी।
+<br>..
+<br>...
+पत्नी हंसके: अभी भी मेरी जैसी ही चाहिए!!!!"
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+75)लड़की- ok, F9 I will talk 2 U T9i8, W84 me.
+<br>
+मैं- बहन हिन्दी या इंग्लिश में बात कर लिया कर, Maths मेरी बचपन से ही कमजोर है।
+</h1>
       </div>
     </div>
   </div>
