--- a/index.html
+++ b/index.html
@@ -686,6 +686,52 @@ Boy: ओह
 <br>
 मैं- बहन हिन्दी या इंग्लिश में बात कर लिया कर, Maths मेरी बचपन से ही कमजोर है।
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+76)GF:- Mujhe Teddy Chahiye Amma Jaan Se Mangva Do. 
+<br>
+BF: Behen Wo Amma Jaan
+<br> Nahi Amazon Hai.
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+77)किसी लड़की से अगर बदला लेना हो तो
+14 फरवरी की रात को उसके दरवाजे पे चॉकलेट फूल और एक कार्ड रख दे
+<br>
+ फिर वो जाने उसका बाप जाने
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+78)भारतीय TV सीरियल में :
+<br>
+एक्टिंग 5% होती है 
+<br>
+मेकअप 15% होता है।
+<br>
+ ब्रेक 10% होता है और
+<br>
+70% होता है।
+<br>
+धूम तन न न<br>
+धूम तन न न,<br>
+ तेरे न तेरे न
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+79)लड़की : तू जहाँ-जहाँ चलेगा मेरा साया साथ होगा,
+<br>
+लड़का: मुझे तो पहले ही लगता था कि तू भूतनी है.. 
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+80)सबको खुश रखना जिंदा मेंढकों  को तौलने जैसा है,
+एक को बिठाओ तो दूसरा कूद जाता है.
+</h1>
       </div>
     </div>
   </div>
