--- a/index.html
+++ b/index.html
@@ -732,7 +732,38 @@ BF: Behen Wo Amma Jaan
 80)सबको खुश रखना जिंदा मेंढकों  को तौलने जैसा है,
 एक को बिठाओ तो दूसरा कूद जाता है.
 </h1>
-      </div>
+<br>
+<br>
+<h1 style="color:Yellow">
+81)मायके से पत्नी का फ़ोन आया <br>
+वाइफ :- आपके बिना जी नहीं लगता है<br>
+हसबंड - अरे पगली ZEE नहीं लगता तो, स्टार और सोनी लगा कर देख लिया कर... वो भी अच्छे चैनल है
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+82)पतिः- ये कैसा खाना बनाया है तुमने, बिलकुल गोबर जैसा.....?
+<br>
+<br>
+<br>
+<br>
+83)पत्नी:- हे भगवान, इस आदमी ने हर चीज़ चख रखी है....
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+84)अंग्रेजी की किताब पढ़कर पत्नी ने पूछा:- Complete और Finish क्या फर्क होता है?
+<br>
+पति:- शादी के बाद सही पत्नी मिले तो समझो कंप्लीट और गलत बीवी मिली तो समझो जिंदगी फिनिश
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+85)काम एसा करो कि लोग कहें
+<br>
+तू रहन दे, मैं कर लूंगा
+</h1> 
+     </div>
     </div>
   </div>
 </section>
