--- a/index.html
+++ b/index.html
@@ -743,25 +743,30 @@ BF: Behen Wo Amma Jaan
 <br>
 <h1 style="color:Yellow">
 82)पतिः- ये कैसा खाना बनाया है तुमने, बिलकुल गोबर जैसा.....?
-<br>
-<br>
-<br>
-<br>
-83)पत्नी:- हे भगवान, इस आदमी ने हर चीज़ चख रखी है....
+<br>.
+<br>.
+<br>.
+<br>.
+पत्नी:- हे भगवान, इस आदमी ने हर चीज़ चख रखी है....
 </h1>
 <br>
 <br>
 <h1 style="color:Yellow">
-84)अंग्रेजी की किताब पढ़कर पत्नी ने पूछा:- Complete और Finish क्या फर्क होता है?
+83)अंग्रेजी की किताब पढ़कर पत्नी ने पूछा:- Complete और Finish क्या फर्क होता है?
 <br>
 पति:- शादी के बाद सही पत्नी मिले तो समझो कंप्लीट और गलत बीवी मिली तो समझो जिंदगी फिनिश
 </h1>
 <br>
 <br>
 <h1 style="color:Yellow">
-85)काम एसा करो कि लोग कहें
-<br>
+84)काम एसा करो कि लोग कहें
 तू रहन दे, मैं कर लूंगा
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+85)कोरोना मुक्ति मंत्र ओम सुतम उठम ठुसम मोबाइल यूजम,
+ फिर सूतम मे घर में रहम 'स्वाहा' 🔥
 </h1> 
      </div>
     </div>
