--- a/index.html
+++ b/index.html
@@ -768,6 +768,54 @@ BF: Behen Wo Amma Jaan
 85)कोरोना मुक्ति मंत्र ओम सुतम उठम ठुसम मोबाइल यूजम,
  फिर सूतम मे घर में रहम 'स्वाहा' 🔥
 </h1> 
+<br>
+<br>
+<h1 style="color:Yellow">
+86)जली को आग कहते हैं...!
+<br>
+ बुझी को राख कहतेहैं।
+ <br>
+जिसका Misscall देखते ही इंसान घर आ जाये..! 
+<br>
+उसे "बीवी की धाक " कहते हैं ...
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+87)पत्नी: आटा कहाँ से लाये थे! 
+<br>
+पति: क्यों, क्या हुआ!
+<br>
+पत्नी: सारी रोटियां जल गयीं !
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+88)भीड़ में अलग दिखना चाहते हैं तो 
+<br>
+अभी से स्वेटर
+<br>
+पहनना शुरू कर दो!
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+89)पप्पू को फांसी की सजा सुनाई गयी 
+<br>
+ जज न पूछा:- कोई आखिरी ख्वाहिश ?
+ <br>
+पप्पू:- हमारी जगह तुम लटक जाओ
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+90)खाना खाने बैठे पति ने पत्नि को आवाज लगाई - "अरी सुनती हो... भाग्यवान! ये जो तुमने सब्जी बनाई है इसे क्या कहते हैं ?? "
+<br>
+पत्नि:- " क्यों किसलिये पूछ रहे हो ? "
+<br>
+पति :- अरे भाई मुझसे भी तो स्वर्ग में पूछा जायेगा क्या खा के मरे थे !!
+</h1>
+
      </div>
     </div>
   </div>
