--- a/index.html
+++ b/index.html
@@ -815,6 +815,45 @@ BF: Behen Wo Amma Jaan
 <br>
 पति :- अरे भाई मुझसे भी तो स्वर्ग में पूछा जायेगा क्या खा के मरे थे !!
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+91)अमेरिका के 2 बड़े वैज्ञानिक उस वक्त बेहोश हो गए
+जब उन्हें पता चला कि चप्पल उल्टी होने से घर में लडाई हो जाती है।
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+92)अमरीका मे ऐक्सीडन्ट होता है तो लोग बोलते है "ओह माय गॉड"
+<br>
+पाक मे एक्सीडेंट तो "या अल्लाह"
+<br>
+भारत मे ऐक्सीडन्ट हो तो "आया मजा" और तेज चलाओ गाडी
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+93)उसने कहा मैं थोड़ी अलग हुँ
+<br>
+तो मैने चॉकलेट की जगह बीड़ी दे दि
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+94)ससुर::-तुम दारू पियत हो कबहु बताये नाही ॥ ॥
+दामाद :- तुम्हार लडकी खून पियत है, तुम बताए थे का ॥
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+TV Reporter ने एक जख्मी से
+<br>
+पूछा :- जब बॉम्ब गिरा तो क्या वो जोरसे गिरा ?
+<br>
+ जख्मी गुस्से मे:-नहीं साले, वो रेंगता हुआ मेरे पास आय
+<br>
+और शर्मा के बोला ..... dhummm
+</h1>
 
      </div>
     </div>
