--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ BF: Behen Wo Amma Jaan
 <br>
 <br>
 <h1 style="color:Yellow">
-TV Reporter ने एक जख्मी से
+95)TV Reporter ने एक जख्मी से
 <br>
 पूछा :- जब बॉम्ब गिरा तो क्या वो जोरसे गिरा ?
 <br>
