--- a/index.html
+++ b/index.html
@@ -854,6 +854,55 @@ BF: Behen Wo Amma Jaan
 <br>
 और शर्मा के बोला ..... dhummm
 </h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+96)इंसान का दिमाग 24 घंटे काम करता है...!! 
+<br>
+सिर्फ वह दो बार ही बंद हो जाता है..,,
+<br>
+पहला exam के समय
+<br>
+और दूसरा बीबी पसंद करते समय
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+97)लड़का - शादी करले मुझसे ... ! 
+<br>
+लड़की - क्यूँ ?
+<br>
+लड़का - मेरे पापा गाँव के सबसे बड़े आदमी हैं...
+<br>
+लड़की- ठीक है
+<br>
+शादी के बाद लड़की को पता चला कि लड़के का बाप 105 साल का है * !!!
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+98)सास:- कितनी बार कहा है, बाहर जाओ तो बिन्दी लगाकर जाया करो।
+<br>
+आधुनिक बहु:- पर जीन्स पर बिन्दी - कौन लगाता है...?
+<br>
+सास- तो मैंने कब कहा जीन्स पर लगानी है, माथे पर लगा चुड़ैल माथे पर.
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+99)आइस क्रीम खरीदने के तरीके
+अमेरिकन :-one butter - scotch, two vannila, and one chocolate with nuts...
+<br>
+Indian :-एक 5 वाली, दो 10 - वाली, और दो परसों जो खाई थी<br>
+और एक ये भैया जो खा रहा है at...
+</h1>
+<br>
+<br>
+<h1 style="color:Yellow">
+100)प्रेम विवाह कभी नहीं करना चाहिए।
+आज मैं अपनी पत्नी से लड़ रहा था ।
+तो पत्नी बोली कुत्ते तू मेरे पीछे पड़ा था मैं नहीं।
+</h1>
 
      </div>
     </div>
