--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       
-      <h1 class="title-font sm:text-4x text-3x mb-4 font-medium text-gray-900"> <h1 style="color:Blue">SMITI</h1>
+      <h1 class="title-font sm:text-4x text-3x mb-4 font-medium text-gray-900"> <h1 style="color:Blue">SMILY</h1>
       <p class="title-font sm:text-4x text-4x mb-4 font-medium text-gray-900">
       <p style="color:Red"> Welcome to smiti Jokes ,This website where you finding funny jokes for make happy your
 friend & family . </h1>  
