--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ friend & family . </h1>
   <html>
 <body>
 
+<video width="320" height="240" controls> <source src=”https://youtu.be/BddP6PYo2gs” type=video/ogg> <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4> </video>
   <h1 style="color: Yellow">
   1)हमारी Post का उद्देश्य सिर्फ मनोरंजन करना है.
 <br>
