--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       
       <h1 class="title-font sm:text-4x text-3x mb-4 font-medium text-gray-900"> <h1 style="color:Blue">SMILY</h1>
       <p class="title-font sm:text-4x text-4x mb-4 font-medium text-gray-900">
-      <p style="color:Red"> Welcome to SMILY Jokes ,This website where you finding funny jokes for make happy your
-friend & family . </h1>  
+      <p style="color:Red">SMILY JOKES आपका स्वागत है, यह वेबसाइट जहां आप अपने दोस्त और परिवार को खुश करने के लिए मजेदार चुटकुले ढूंढते हैं 
+चुटकुले . </h1>  
   <html>
 <body>
 <h2></h2>
