--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <style>
     /* Here we define the bg color, we can use #color code as well */
     body {
-        background-color:powder blue;
-    }
+        background-colour: #800000;
   </style>
   <style>
     h1
