--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <style>
     /* Here we define the bg color, we can use #color code as well */
     body {
-        background-colour: Powder blue;
+        background-colour:#abc949;
   </style>
   <style>
     h1
