--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       text-shadow: 2px 2px Black;
     }
     </style>
-  <html lang="hindi-IND">
+  <html lang="hindi">
 <body>
 <div id="google_translate_element"></div>
 
