--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <style>
     /* Here we define the bg color, we can use #color code as well */
     body {
-        background-colour:#abc949;
+      background-color:#fff4511e;
   </style>
   <style>
     h1
@@ -31,16 +31,7 @@
       text-shadow: 2px 2px Black;
     }
     </style>
-  <html lang="hindi">
-<body>
-<div id="google_translate_element"></div>
-
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <html>
 
   <h1 style="color: Yellow">
 
