--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
+   <a href="#" class="instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
   <h1 class="text-3xl font-bold underline">
     <header class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
