--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <a href="#" class="instagram">
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-instagram">Insta-share</i>
             </a>
   <h1 class="text-3xl font-bold underline">
     <header class="text-gray-600 body-font">
@@ -26,7 +26,7 @@
 <style>
     /* Here we define the bg color, we can use #color code as well */
     body {
-      background-color:red;
+      background-color:Ivory;
   </style>
   <style>
     h1
